--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes | Home</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><<a href="recipes/cinnamon-apples.html">Cinnamon Apples</a>/li>
-        <li><a href="recipes/lemon-bread.html"></a></li>
-        <li></li>
+        <li><a href="recipes/cinnamon-apples.html">Cinnamon Apples</a></li>
+        <li><a href="recipes/lemon-bread.html">Glazed Lemon Bread</a></li>
+        <li><a href="recipes/grilled-shrimp.html">Marinated Grilled Shrimp</a></li>
     </ul>
 </body>
 </html>
