Update index html, add pages and style css
Added css file for index.html and added css style to index page
added css file for recipe html pages and styled recipe pages all
the same.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Home</title>
+
+    <title>Tasty Treat Recipes | Home</title>
+
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/cinnamon-apples.html">Cinnamon Apples</a></li>
-        <li><a href="recipes/lemon-bread.html">Glazed Lemon Bread</a></li>
-        <li><a href="recipes/grilled-shrimp.html">Marinated Grilled Shrimp</a></li>
-    </ul>
+    <div class="main-container">
+        <h1 class="home-title">Tasty <span class="home-title-color">Treats</span> Recipes</h1>
+        <ul class="recipe-list">
+            <li class="recipe-list-item"><a href="recipes/cinnamon-apples.html">Cinnamon Apples</a></li>
+            <li class="recipe-list-item"><a href="recipes/lemon-bread.html">Glazed Lemon Bread</a></li>
+            <li class="recipe-list-item"><a href="recipes/grilled-shrimp.html">Marinated Grilled Shrimp</a></li>
+        </ul>
+    </div>
 </body>
 </html>
