--- a/recipes/grilled-shrimp.html
+++ b/recipes/grilled-shrimp.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Recipes | Marinated Grilled Shrimp</title>
+
+    <!-- css -->
+    <link rel="stylesheet" href="../css/pages.css">
+
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Average+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Marinated Grilled Shrimp</h1>
-    <img src="https://bit.ly/3QgAAvj" alt="Marinated Grilled Shrimp">
+    <h4><a href="../index.html">Home</a></h4>
+    <h1 class="main-title">Marinated <span class="main-title-color">Grilled</span> Shrimp</h1>
+    <img class="recipe-image" src="https://bit.ly/3QgAAvj" alt="Marinated Grilled Shrimp">
+    <hr>
     <h3>Description</h3>
     <p>
         Fire up the grill it's time to make a tasty home cooked shrimp dinner! Shrimp alone is good by it's self and we all know that
@@ -20,7 +31,8 @@
         cooked shrimp. Throwing a little pineapple in with this recipe and you can a nice sweet taste along with the shrimp. It doesn't end there
         Let your imagination run wild and you can create all sorts of dishes with this recipe! Lets get cooking!
     </p>
-    <h4>Ingredients</h4>
+    <hr>
+    <h3>Ingredients</h3>
     <ul>
         <li>1/3 cup olive oil</li>
         <li>1/4 cup tomato sauce</li>
@@ -32,7 +44,8 @@
         <li>2 pounds fresh shrimp, peeled and deveined</li>
         <li>6 each skewers</li>
     </ul>
-    <h4>Steps</h4>
+    <hr>
+    <h3>Steps</h3>
     <ol>
         <li>Stir together olive oil, tomato sauce, garlic, and red wine vinegar in a large bowl. Season with basil, salt, and cayenne pepper. 
             Add shrimp to the bowl; stir until evenly coated. Cover and refrigerate for 30 minutes to 1 hour, stirring once or twice.</li>
